Add Feedback and Swagger documentation